fixed overflow on cards. added lightbox gallery

--- a/src/scss/_profilecards.scss
+++ b/src/scss/_profilecards.scss
@@ -29,6 +29,7 @@
     > .card-body {
         text-align: center;
         padding: 1rem;
+        overflow-y: auto;
         > .card-text {
             text-align: left;
             font-size: 1rem;
