--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,10 @@
 @import '_mainprofile.scss';
 @import '_profilecards.scss';
 
+html {
+    scroll-behavior: smooth;
+}
+
 a {
     transition: all .2s linear;
 }
